# StreamCheats-Core

./: .gitignore  ARCHITECTURE.md  BUILD.md  CLAUDE.md  README.md
.github/workflows/: build-check.yml  release-nightly.yml  release-stable.yml
backend/: Cargo.toml  README.md  build.rs  config.example.json  reset_ft232h.py  serial_debug.py
backend/examples/: checklist_walk.rs  enc_live_roundtrip.rs  log_burst.rs
backend/src/: lib.rs  main.rs
backend/src/experimental/: mod.rs  registry.rs
backend/src/firmware/: device.rs  download.rs  filename.rs  flash.rs  github.rs  loader.rs  mod.rs
backend/src/http/: mod.rs  server.rs  state.rs
backend/src/http/routes/: bug_report.rs  experimental.rs  firmware.rs  health.rs  log_stream.rs  mod.rs  updates.rs
backend/src/kmbox_net/: encryption.rs  listener.rs  mod.rs  parser.rs  schema.rs
backend/src/kmbox_net/monitor/: encoder.rs  mod.rs  peer_info.rs  peer_registry.rs  subscriber.rs
backend/src/services/: mod.rs
backend/src/services/bug_report/: config_snapshot.rs  error.rs  log_slicer.rs  mod.rs  system_info.rs  zip_builder.rs
backend/src/services/log_stream/: broadcast.rs  event.rs  layer.rs  mod.rs  ring.rs
backend/src/streamcheats/: device.rs  device_settings.rs  discovery.rs  format.rs  heartbeat.rs  mod.rs  packet.rs  reader.rs  writer.rs
backend/src/streamcheats/mask/: controller.rs  mod.rs  state.rs  watchdog.rs
backend/src/streamcheats/state/: bus.rs  device_state.rs  event.rs  mod.rs
backend/src/updater/: download.rs  github.rs  installed.rs  mod.rs  version.rs
backend/src/util/: daemon.rs  log_rotation.rs  mod.rs  settings.rs  translator.rs
docs/frontend-design-skill/: README.md
electron/: .gitignore  main.js  package.json  pnpm-lock.yaml  preload.js
electron/assets/: splash.html
electron/services/: backend-process.js  backend-url.js  bug-report.js  health-check.js  http-port.js  logger.js  single-instance.js  splash.js  tray.js  window-prefs.js  window.js
frontend/: next.config.ts  package.json  pnpm-lock.yaml  postcss.config.mjs  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/experimental/: page.tsx
frontend/app/keyboard/: page.tsx
frontend/app/logs/: page.tsx
frontend/app/logs/window/: page.tsx
frontend/app/mouse/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/updates/: page.tsx
frontend/app/updates/firmware/: page.tsx
frontend/components/: AppFooter.tsx  AppHeader.tsx  AppShell.test.tsx  AppShell.tsx  BugReportButton.tsx  BugReportModal.tsx  ConnectionStatus.tsx  LogPreview.tsx  LogStream.tsx  LogViewport.tsx  StatusRail.tsx  UpdateBanner.tsx  UpdateSettings.tsx
frontend/components/home/: BugReportCard.tsx  DeviceStatusCard.tsx  DevicesSection.tsx  UnseenLogCard.tsx  UpdatePendingBanner.tsx  UpdateStatusCard.tsx
frontend/components/ui/: Card.tsx  Eyebrow.tsx  Modal.tsx  PageHeader.tsx  PendingStub.tsx  PlannedSettings.tsx
frontend/components/updates/: ActionButton.tsx  FirmwareUpdatesSection.tsx  FlashStepperModal.test.tsx  FlashStepperModal.tsx  ProgressBar.tsx  SoftwareUpdatesSection.tsx  StateChip.tsx
frontend/lib/: motion.ts
frontend/lib/api/: bug-report.ts  client.ts  errors.ts  experimental.test.ts  experimental.ts  firmware.test.ts  firmware.ts  updater.test.ts  updater.ts
frontend/lib/api/schemas/: experimental.ts  firmware.ts  health.ts  index.ts  logs.ts  updater.ts
frontend/lib/hooks/: useAnyUpdatePending.ts  useBugReport.ts  useConnectionStatus.ts  useDeviceUptime.ts  useExperimentalStatus.test.tsx  useExperimentalStatus.ts  useFirmwareReleases.test.tsx  useFirmwareReleases.ts  useFirmwareStatus.test.tsx  useFirmwareStatus.ts  useHealthDetail.ts  useLogStream.ts  useMarkLogsSeen.ts  useUnseenLogCount.ts  useUpdater.test.tsx  useUpdater.ts
frontend/lib/log/: format.ts
frontend/lib/route/: href.ts
frontend/lib/storage/: unseenLog.ts
frontend/lib/toast/: toast.tsx
frontend/test/: CONTRACT.md  contract.test.ts  setup.ts
frontend/test/msw/: fixtures.ts  handlers.ts  server.ts
tests/: .gitignore  COMPATIBILITY_CHECKLIST.md  OVERNIGHT_TEST_RESULTS.md  README.md
tests/scripts/: README.md  probe_monitor_callback.py
